alterando onte cabeçalho

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ header {
     padding: 20px;
     font-size: 32px;
     color: rgb(255, 84, 84);
+    font-family: "Nosifer", sans-serif;
 }
 
 section {
